--- a/map.html
+++ b/map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kp">
 
 <head>
     <meta charset="UTF-8" />
@@ -76,7 +76,7 @@
                     <!-- <div class="modal-window"> -->
                         <div class="content_map">
                         <div class="ml-auto">
-                            <button onclick="out()">
+                            <button onclick="out()" class="p-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14"
                                     fill="none">
                                     <path d="M1 1L13 13M1 13L13 1L1 13Z" stroke="#3F3F46" stroke-width="2"
