fix: 비밀번호 변경 ajax, 메인 세부 페이지 (강윤진)

--- a/account/changePassword.html
+++ b/account/changePassword.html
@@ -31,7 +31,7 @@
        <!--새 비밀번호 재입력 input-box -->
          <div id = passwordConfirmation class="input-box mt-4">
             <label for="passwordConfirmation" class="block text-black-700 font-bold mb-2">새 비밀번호 재입력</label>
-            <input type="passwordConfirmation" id="passwordConfirmation" name="passwordConfirmation" class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required />
+            <input type="password" id="passwordConfirmation" name="passwordConfirmation" class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required />
         </div>
 
        <!-- 비밀번호 변경하기 버튼 -->
