--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
         >
           <!-- 로고 이미지 삽입 -->
           <div class="flex items-center justify-center">
-            <a href="#" class="flex items-center">
+            <a href="/main.html" class="flex items-center">
               <img src="../img/logo.png" class="w-24 h-9 mr-3" />
             </a>
             <div class="flex justify-end items-center">
@@ -62,15 +62,15 @@
           class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0"
         >
           <div>
-            <a href="#">홈</a>
+            <a href="/main.html">홈</a>
             <div class="bg-mySky p-1 h-3"></div>
           </div>
           <div>
-            <a href="#">주변 대피소</a>
+            <a href="/map.html">주변 대피소</a>
             <div class="bg-mySky p-1 h-3"></div>
           </div>
           <div>
-            <a href="#">체크리스트</a>
+            <a href="/checklist.html">체크리스트</a>
             <div class="bg-mySky p-1 h-3"></div>
           </div>
         </div>
