--- a/alarm/select_category.html
+++ b/alarm/select_category.html
@@ -17,24 +17,18 @@
     <div class="relative content bg-white border-white ">
         <div class="bg-white ">
             <nav>
-                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 shadow-md mb-4">
-                    <a href="#" class="flex items-center">
+                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 shadow-md mb-5">
+                    <a href="/main.html" class="flex items-center">
                         <img src="../img/logo.png" class="w-24 h-9 mr-3" />
                     </a>
-                    <div class="flex items-center justify-end text-end">
-                        <img src="../img/알림.png" class="w-6 h-6 mt-3 mr-3" />
-                        <div class="font-medium text-lg mt-1 mr-6">강윤진님</div>
-                        <div class="text-center">
-                          <button
-                            type="button"
-                            data-drawer-target="drawer-navigation"
-                            data-drawer-show="drawer-navigation"
-                            aria-controls="drawer-navigation"
-                          >
-                            <img src="../img/햄버거바.png" alt="menu" class="w-6 h-5 mt-2" />
-                          </button>
+                    <div class="flex justify-end items-center">
+                        <div class="w-20 h-8 text-center p-1">
+                            <button>로그인</button>
                         </div>
-                      </div>
+                        <div class="bg-yellow-300 w-20 h-8 rounded text-center p-1">
+                            <button>회원가입</button>
+                        </div>
+                    </div>
                 </div>
             </nav>
             <!--카테고리 선택-->
