--- a/alarm/select_region.html
+++ b/alarm/select_region.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8" />
@@ -13,16 +13,12 @@
     <link rel="stylesheet" href="../css/select.css" />
 </head>
 
-
 <body>
-    <script type="text/javascript"
-        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=122a12ac53dfd9ece5eb472180241e53"></script>
-    <!--header-->
-    <div class="relative content bg-white border-white">
-        <div>
+    <div class="relative content bg-white border-white ">
+        <div class="bg-white ">
             <nav>
-                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 shadow-md">
-                    <a href="main.html" class="flex items-center">
+                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 shadow-md mb-5">
+                    <a href="/main.html" class="flex items-center">
                         <img src="../img/logo.png" class="w-24 h-9 mr-3" />
                     </a>
                     <div class="flex justify-end items-center">
@@ -35,25 +31,22 @@
                     </div>
                 </div>
             </nav>
-            <!--main-->
-            <!--다른 지역 확인하기-->
-            <section id="select_other">
+            <!--지역선택-->
+            <section id="select_country">
                 <nav>
-                    <div class="mb-8">
+                    <div class="h-36">
                         <div class="ml-3 flex-col justify-start h-12">
-                            <div><a href="#" class="flex items-center mt-4">
+                            <div class="flex items-center"><a href="#">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                         fill="none">
                                         <path d="M10 19L3 12M3 12L10 5M3 12H21" stroke="#3F3F46" stroke-width="2"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </svg>
-                                    <div class="w-56 h-8 bg-yellow-100 rounded-full text-xs ml-10 px-4 p-2 font-bold text-gray-700;" id="toastMsg" style="display:none">지역이 성공적으로
-                                        변경되었습니다.</div>
                             </div>
-
                             <div>
-                                <div class="font-bold text-3xl">다른 지역 확인하기</div>
-
+                                <div class="font-bold text-3xl mt-2">알림 설정</div>
+                                <div class="font-bold text-lg ml-1 mt-3">지역 선택</div>
+                                <div class="text-sm ml-1 mt-1">웹 푸시 알림을 받고 싶은 지역을 선택해 주세요.</div>
                             </div>
                         </div>
                     </div>
@@ -78,18 +71,18 @@
                         <div><button>경상남도</button></div>
                         <div><button>제주특별자치도</button></div>
                     </div>
-
+                    <div class="mx-auto">
+                        <button type="button" onclick="location.href='select_category.html'"
+                            class="w-80 h-12 bg-gray-600 rounded text-white text-base font-bold ml-3.5 mt-5 pl-3 pr-3">다음</button>
+                    </div>
                 </div>
             </section>
-
         </div>
-    </div>
-
 
     </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="../js/select_other.js"></script>
+    <script src="../js/alarm_select.js"></script>
+    
 </body>
 
 </html>
