fix: 메인 (강윤진)

--- a/mainDetail.html
+++ b/mainDetail.html
@@ -66,7 +66,7 @@
  </div>
  <div class="flex items-center justify-center">
   <div class="input-box mt-2 relative">
-    <input type="comment" id="verificationCode" name="verificationCode" placeholder="재난관련 제보를 주변인과 나눠보세요." class="form-input w-80 h-11 px-3 py-2 text-xs rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required style ="margin-left: -30px;">
+    <textarea type="comment" id="verificationCode" name="verificationCode" placeholder="재난관련 제보를 주변인과 나눠보세요." class="form-input w-80 h-11 px-3 py-2 text-xs rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required style ="margin-left: -30px;">
     <button id="verifyButton" type="button" class="absolute right-2 translate-y-1/4 w-11 h-7 bg-gray-600 rounded-md text-white font-medium text-sm">입력</button>
     <!-- 이미지 업로드 버튼 -->
     <input type="file" id="commentImageUpload" class="hidden" />
