--- a/account/signup.html
+++ b/account/signup.html
@@ -68,7 +68,7 @@
         </div>
         <!-- 비밀번호 재입력 input-box -->
         <div class="input-box mt-4">
-          <label for="repassword" class="block text-black-700 font-bold mb-2"
+          <label for="password" class="block text-black-700 font-bold mb-2"
             >비밀번호 재입력</label
           >
           <input
