fix :비밀번호 숨김처리(강윤진)

--- a/account/signup.html
+++ b/account/signup.html
@@ -68,13 +68,13 @@
         </div>
         <!-- 비밀번호 재입력 input-box -->
         <div class="input-box mt-4">
-          <label for="password" class="block text-black-700 font-bold mb-2"
+          <label for="repassword" class="block text-black-700 font-bold mb-2"
             >비밀번호 재입력</label
           >
           <input
-            type="repassword"
+            type="password"
             id="repassword"
-            name="password"
+            name="repassword"
             class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600 mb-8"
             required
           />
