fix: 회원정보 수정(비밀번호 disable), 메인(누르면 글씨 진하게, 새로고침 버튼 누르면 시간 변하게), mock데이터 작업 완료(댓글 상세 제외) : 강윤진

--- a/account/editMember.html
+++ b/account/editMember.html
@@ -37,7 +37,7 @@
         <!--비밀번호 input-box-->
         <div class="input-box mt-1 relative">
             <label for="password" class="block text-black-700 font-bold mb-2">비밀번호</label>
-            <input type="password" id="password" name="password" class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required />
+            <input disabled type="password" id="password" name="password" class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required  />
             <button id="change" type="button" class="absolute right-3 translate-y-1/4 w-11 h-7 bg-gray-600 rounded-md text-white font-bold text-sm">변경</button>
         </div>
 
