--- a/main.html
+++ b/main.html
@@ -94,10 +94,17 @@
         <!--확성기 이미지 -->
         <img src="../img/icon/확성기.png" alt="삐용" class="w-16 h-14 mt-5" />
       </div>
-      <!--현재 날짜, 시각-->
+      <div class ="flex items-start justify-start">
+         <!--현재 날짜, 시각-->
       <div class="text-black font-medium text-sm ml-6">
         2023/07/27 오전 1:59 기준
       </div>
+      <button id = "refresh">
+        <img src="../img/icon/새로고침.png" alt="삐용" class="w-4 w-4 ml-2 mt-0.5" />
+      </button>
+  
+      </div>
+    
 
       <!--뉴스상자-->
       <div id="notice-block" class="flex items-center justify-center">
@@ -111,7 +118,7 @@
         </div>
       </div>
       <div id="Button" class="flex items-center justify-center mt-3">
-        <!--날씨 이미지-->
+        <!--날씨 버튼-->
         <div
           id="weatherButton"
           class="bg-white border-gray-200 shadow-md rounded-md block justify-center w-20 h-20 items-center mr-1"
@@ -138,7 +145,7 @@
           </div>
           <p class="text-sm text-center">지진/해일</p>
         </div>
-        <!--민방위 이미지-->
+        <!--민방위 버튼-->
         <div
           id="civilButton"
           class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20 mr-1"
@@ -151,7 +158,7 @@
           </div>
           <p class="text-sm text-center">민방위</p>
         </div>
-        <!-- 실종자 이미지 -->
+        <!-- 실종자 버튼 -->
         <div
           id="lostButton"
           class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20"
