feat:알람 페이지 완료

--- a/alarm/select_other.html
+++ b/alarm/select_other.html
@@ -77,23 +77,23 @@
                 </nav>
                 <div>
                     <div id="countryBox">
-                        <!-- <div><button>서울특별시</button></div>
-                        <div><button>부산광역시</button></div>
-                        <div><button>대구광역시</button></div>
-                        <div><button>인천광역시</button></div>
-                        <div><button>광주광역시</button></div>
-                        <div><button>대전광역시</button></div>
-                        <div><button>울산특별시</button></div>
-                        <div><button>세종특별자치시</button></div>
-                        <div><button>경기도</button></div>
-                        <div><button>강원특별자치도</button></div>
-                        <div><button>충청북도</button></div>
-                        <div><button>충청남도</button></div>
-                        <div><button>전라북도</button></div>
-                        <div><button>전라남도</button></div>
-                        <div><button>경상북도</button></div>
-                        <div><button>경상남도</button></div>
-                        <div><button>제주특별자치도</button></div> -->
+                        <div><button class="region_btn" id="서울특별시">서울특별시</button></div>
+                        <div><button class="region_btn" id="부산광역시">부산광역시</button></div>
+                        <div><button class="region_btn" id="대구광역시">대구광역시</button></div>
+                        <div><button class="region_btn" id="인천광역시">인천광역시</button></div>
+                        <div><button class="region_btn" id="광주광역시">광주광역시</button></div>
+                        <div><button class="region_btn" id="대전광역시">대전광역시</button></div>
+                        <div><button class="region_btn" id="울산광역시">울산광역시</button></div>
+                        <div><button class="region_btn" id="세종특별자치시">세종특별자치시</button></div>
+                        <div><button class="region_btn" id="경기도">경기도</button></div>
+                        <div><button class="region_btn" id="강원특별자치도">강원특별자치도</button></div>
+                        <div><button class="region_btn" id="충청북도">충청북도</button></div>
+                        <div><button class="region_btn" id="충청남도">충청남도</button></div>
+                        <div><button class="region_btn" id="전라북도">전라북도</button></div>
+                        <div><button class="region_btn" id="전라남도">전라남도</button></div>
+                        <div><button class="region_btn" id="경상북도">경상북도</button></div>
+                        <div><button class="region_btn" id="경상남도">경상남도</button></div>
+                        <div><button class="region_btn" id="제주특별자치도">제주특별자치도</button></div>
                     </div>
 
                 </div>
