--- a/map.html
+++ b/map.html
@@ -66,11 +66,11 @@
                     </div>
                     <div class="flex mb-2 mt-2 mb-1">
 
-                        <button
+                        <button id="all"
                             class="h-8 bg-gray-600 item-center rounded-full text-xs px-4 p-2 text-white font-bold" onclick="go()">전체</button>
-                        <button
+                        <button id="earth"
                             class="h-8 bg-yellow-600 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold" onclick="earthquake()">지진/해일</button>
-                        <button
+                        <button id="civil"
                             class="h-8 bg-red-400 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold" onclick="civil()">민방위</button>
                     </div>
 
