--- a/alarm/alarm.html
+++ b/alarm/alarm.html
@@ -18,7 +18,7 @@
         <div class="bg-white border-gray-200">
             <nav>
                 <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 shadow">
-                    <a href="#" class="flex items-center">
+                    <a href="/main.html" class="flex items-center">
                         <img src="../img/logo.png" class="w-24 h-9 mr-3" />
                     </a>
                     <div class="flex justify-end items-center">
