--- a/alarm/select_category.html
+++ b/alarm/select_category.html
@@ -17,7 +17,8 @@
     <div class="relative content bg-white border-white ">
         <div class="bg-white ">
             <nav>
-                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 shadow-md mb-5">
+                <div
+                    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 shadow-md mb-5">
                     <a href="/main.html" class="flex items-center">
                         <img src="../img/logo.png" class="w-24 h-9 mr-3" />
                     </a>
@@ -56,13 +57,13 @@
 
                     <div>
                         <div id="categoryBox" class="text-base font-normal">
-                            <div><button class="category_btn" id="weather" onclick="select_category(this.id)">날씨</button></div>
-                            <div><button class="category_btn" id="earthquake" onclick="select_category(this.id)">지진/해일</button></div>
-                            <div class="pt-1"><button class="category_btn" id="civil" onclick="select_category(this.id)" >민방위</button></div>
-                            <div class="pt-1"><button  class="category_btn" id="lost" onclick="select_category(this.id)">실종자</button></div>
+                            <div><button class="category_btn" id="weather">날씨</button></div>
+                            <div><button class="category_btn" id="earthquake">지진/해일</button></div>
+                            <div class="pt-1"><button class="category_btn" id="civil">민방위</button></div>
+                            <div class="pt-1"><button class="category_btn" id="lost">실종자</button></div>
                         </div>
                         <div class="mx-auto">
-                            <button type="button" onclick="put()"
+                            <button id="sendButton"
                                 class="w-80 h-12 bg-gray-600 rounded text-white text-base font-bold ml-3.5 mt-10 pl-3 pr-3">설정
                                 완료</button>
                         </div>
@@ -74,8 +75,8 @@
 
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="../js/alarm_select.js"></script>
-    
+    <script src="../js/select_category.js"></script>
+
 </body>
 
 </html>
