--- a/alarm/select_region.html
+++ b/alarm/select_region.html
@@ -53,7 +53,7 @@
                 </nav>
                 <div>
                     <div id="countryBox">
-                        <!-- <div><button class="region_btn" id="서울특별시">서울특별시</button></div>
+                        <div><button class="region_btn" id="서울특별시">서울특별시</button></div>
                         <div><button class="region_btn" id="부산광역시">부산광역시</button></div>
                         <div><button class="region_btn" id="대구광역시">대구광역시</button></div>
                         <div><button class="region_btn" id="인천광역시">인천광역시</button></div>
@@ -69,10 +69,10 @@
                         <div><button class="region_btn" id="전라남도">전라남도</button></div>
                         <div><button class="region_btn" id="경상북도">경상북도</button></div>
                         <div><button class="region_btn" id="경상남도">경상남도</button></div>
-                        <div><button class="region_btn" id="제주특별자치도">제주특별자치도</button></div> -->
+                        <div><button class="region_btn" id="제주특별자치도">제주특별자치도</button></div>
                     </div>
                     <div class="mx-auto">
-                        <button id="next_btn"
+                        <button id="sendButton"
                             class="w-80 h-12 bg-gray-600 rounded text-white text-base font-bold ml-3.5 mt-5 pl-3 pr-3">다음</button>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
 
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="../js/alarm_select.js"></script>
+    <script src="../js/selec_region.js"></script>
     
 </body>
 
