--- a/myChecklist.html
+++ b/myChecklist.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
     <script src="./js/myChecklist.js"></script>
-
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <title>삐용</title>
     <link rel="stylesheet" href="../css/config.css" />
   </head>
@@ -114,8 +114,9 @@
 
               <div class="flex justify-center items-center">
                 <button
+                  onclick="downImg()"
                   type="button"
-                  class="m-1.5 px-2.5 py-1 text-white bg-gray-600 hover:bg-gray-100 rounded-lg border border-gray-200 text-sm font-medium hover:text-gray-900"
+                  class="m-1.5 px-2.5 py-1 text-white bg-gray-600 rounded-lg border border-gray-200 text-sm font-medium"
                 >
                   <p class="text-center">공유하기</p>
                 </button>
