Design : main 레이아웃 수정

--- a/main.html
+++ b/main.html
@@ -94,17 +94,19 @@
         <!--확성기 이미지 -->
         <img src="../img/icon/확성기.png" alt="삐용" class="w-16 h-14 mt-5" />
       </div>
-      <div class ="flex items-start justify-start">
-         <!--현재 날짜, 시각-->
-      <div class="text-black font-medium text-sm ml-6">
-        2023/07/27 오전 1:59 기준
+      <div class="flex items-start justify-start">
+        <!--현재 날짜, 시각-->
+        <div id="current_time" class="text-black font-medium text-sm ml-6">
+          현재시간을 불러오고 있습니다.
+        </div>
+        <button id="refresh">
+          <img
+            src="../img/icon/새로고침.png"
+            alt="삐용"
+            class="w-4 w-4 ml-2 mt-0.5"
+          />
+        </button>
       </div>
-      <button id = "refresh">
-        <img src="../img/icon/새로고침.png" alt="삐용" class="w-4 w-4 ml-2 mt-0.5" />
-      </button>
-  
-      </div>
-    
 
       <!--뉴스상자-->
       <div id="notice-block" class="flex items-center justify-center">
@@ -174,47 +176,7 @@
       </div>
 
       <!--메인 박스-->
-      <div id="main" class="ml-5 text-start">
-        <div
-          class="bg-white rounded-md shadow-md h-48 w-80 mt-5 p-4 text-lg font-bold text-start"
-        >
-          <div class="flex items-center justify-between">
-            <div>경기도청 알림</div>
-            <div class="text-grey-600 font-medium text-sm ml-4">
-              2023-07-23 오전 02:16
-            </div>
-          </div>
-          <!--파란, 회색 버튼-->
-          <button
-            class="w-14 h-7 bg-blue-300 rounded-full mr-1 text-sm font-medium text-white mb-1"
-          >
-            호우
-          </button>
-          <button
-            class="w-14 h-7 bg-gray-600 mt-1 rounded-full text-sm font-medium text-white mb-1"
-          >
-            예보
-          </button>
-          <div
-            class="flex items-start justify-center text-black font-medium text-base"
-          >
-            오늘 10시경 집중호우로 역곡천 산책로 침수발생. 하천변, 산책로 등은
-            출입을 금지합니다.
-          </div>
-          <div class="flex items-center justify-end text-end">
-            <img src="../img/icon/댓글.png" class="w-4 h-3.5 mt-1 mr-4" />
-            <div class="font-medium text-sm mt-1 mr-1">댓글</div>
-            <div class="font-medium text-bold mt-1 mr-5">5</div>
-            <button
-              id="authButton"
-              type="button"
-              class="w-14 h-7 bg-gray-600 rounded-md text-white font-medium text-sm"
-            >
-              더보기
-            </button>
-          </div>
-        </div>
-      </div>
+      <div id="main" class="ml-5 text-start"></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../js/main.js"></script>
