Feat : ajax post 댓글 입력

--- a/mainDetail.html
+++ b/mainDetail.html
@@ -55,7 +55,7 @@
                   id="message"
                   rows="4"
                   class="block w-full font-normal text-gray-900 rounded-lg focus:ring-blue-50 focus:border-blue-50"
-                  placeholder="재난관련 이야기를 주변인과 나눠보세요!"
+                  placeholder="재난관련 이야기를 주변인과 나눠보세요! 허위사실은 처벌될 수 있습니다."
                 ></textarea>
               </div>
               <div id="imageContainer"></div>
