Feat : checklist 링크 연결

--- a/checklist.html
+++ b/checklist.html
@@ -79,85 +79,97 @@
         <div
           class="bg-white w-24 h-24 rounded shadow mr-1 flex justify-center items-center"
         >
-          <div class="block justify-center items-center">
-            <div class="flex justify-center items-center">
-              <img
-                class="flex justify-center items-center"
-                src="../img/icon/rain_icon.png"
-              />
+          <a href="checklist/rain.html">
+            <div class="block justify-center items-center">
+              <div class="flex justify-center items-center">
+                <img
+                  class="flex justify-center items-center"
+                  src="../img/icon/rain_icon.png"
+                />
+              </div>
+              <p class="text-sm">호우/홍수/침수</p>
             </div>
-            <p class="text-sm">호우/홍수/침수</p>
-          </div>
+          </a>
         </div>
 
         <div
           class="bg-white w-24 h-24 rounded shadow mr-1 flex justify-center items-center"
         >
-          <div class="block justify-center items-center">
-            <div class="flex justify-center items-center">
-              <img
-                class="flex justify-center items-center"
-                src="../img/icon/earthquake_icon.png"
-              />
+          <a href="checklist/tsunami.html">
+            <div class="block justify-center items-center">
+              <div class="flex justify-center items-center">
+                <img
+                  class="flex justify-center items-center"
+                  src="../img/icon/earthquake_icon.png"
+                />
+              </div>
+              <p class="text-sm text-center">지진/해일</p>
             </div>
-            <p class="text-sm text-center">지진/해일</p>
-          </div>
+          </a>
         </div>
 
         <div
           class="bg-white w-24 h-24 rounded shadow mr-1 flex justify-center items-center"
         >
-          <div class="block justify-center items-center">
-            <div class="flex justify-center items-center">
-              <img
-                class="flex justify-center items-center"
-                src="../img/icon/typhoon_icon.png"
-              />
+          <a href="checklist/typhoon.html">
+            <div class="block justify-center items-center">
+              <div class="flex justify-center items-center">
+                <img
+                  class="flex justify-center items-center"
+                  src="../img/icon/typhoon_icon.png"
+                />
+              </div>
+              <p class="text-sm text-center">태풍/강풍</p>
             </div>
-            <p class="text-sm text-center">태풍/강풍</p>
-          </div>
+          </a>
         </div>
 
         <div
           class="bg-white w-24 h-24 rounded shadow mr-1 flex justify-center items-center"
         >
-          <div class="block justify-center items-center">
-            <div class="flex justify-center items-center">
-              <img
-                class="flex justify-center items-center"
-                src="../img/icon/hotSummer_icon.png"
-              />
+          <a href="checklist/heat.html">
+            <div class="block justify-center items-center">
+              <div class="flex justify-center items-center">
+                <img
+                  class="flex justify-center items-center"
+                  src="../img/icon/hotSummer_icon.png"
+                />
+              </div>
+              <p class="text-sm text-center">폭염</p>
             </div>
-            <p class="text-sm text-center">폭염</p>
-          </div>
+          </a>
         </div>
 
         <div
           class="bg-white w-24 h-24 rounded shadow mr-1 flex justify-center items-center"
         >
-          <div class="block justify-center items-center">
-            <div class="flex justify-center items-center">
-              <img
-                class="flex justify-center items-center"
-                src="../img/icon/snow_icon.png"
-              />
+          <a href="checklist/snow.html">
+            <div class="block justify-center items-center">
+              <div class="flex justify-center items-center">
+                <img
+                  class="flex justify-center items-center"
+                  src="../img/icon/snow_icon.png"
+                />
+              </div>
+              <p class="text-sm text-center">대설</p>
             </div>
-            <p class="text-sm text-center">대설</p>
-          </div>
+          </a>
         </div>
 
         <div
           class="bg-white w-24 h-24 rounded shadow mr-1 flex justify-center items-center"
         >
-          <div class="block justify-center items-center">
-            <div class="flex justify-center items-center">
-              <img
-                class="flex justify-center items-center"
-                src="../img/icon/ambulance_icon.png"
-              />
+          <a href="checklist/safety.html">
+            <div class="block justify-center items-center">
+              <div class="flex justify-center items-center">
+                <img
+                  class="flex justify-center items-center"
+                  src="../img/icon/ambulance_icon.png"
+                />
+              </div>
+              <p class="text-sm text-center">안전/테러</p>
             </div>
-            <p class="text-sm text-center">안전/테러</p>
-          </div>
+          </a>
         </div>
       </div>
 
