--- a/checklist/heat.html
+++ b/checklist/heat.html
@@ -56,7 +56,7 @@
         <div class="content-title flex justify-between">
           <div>
             <p class="text-2xl">
-              <span class="font-bold">호우/홍수/침수</span> <br />
+              <span class="font-bold">폭염</span> <br />
               체크리스트
             </p>
           </div>
