feat:map,alarm관련 페이지 백엔드 통신 전 수정

--- a/map.html
+++ b/map.html
@@ -16,7 +16,7 @@
 
 
     <title>삐용</title>
-    <link rel="stylesheet" href="../css/map.css" />
+    <link rel="stylesheet" href="/css/map.css" />
 </head>
 
 <body>
