--- a/alarm/select_other.html
+++ b/alarm/select_other.html
@@ -23,8 +23,9 @@
                 transform: translateZ(0);
             }
         }
-        #toastMsg{
-            animation:fadeInUp 1s;
+
+        #toastMsg {
+            animation: fadeInUp 1s;
         }
     </style>
 </head>
@@ -55,51 +56,53 @@
             <!--다른 지역 확인하기-->
             <section id="select_other">
                 <nav>
-                    <div class="mb-8">
-                        <div class="ml-3 flex-col justify-start h-12">
-                            <div><a href="#" class="flex items-center mt-4">
+                    <div class="ml-4 mb-6 mt-5 h-18">
+
+                        <div class="flex-col justify-start mb-4">
+                            <div class="flex items-center"><a href="/alarm/alarm.html">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                         fill="none">
-                                        <path d="M10 19L3 12M3 12L10 5M3 12H21" stroke="#3F3F46" stroke-width="2"
+                                        <path d="M10 19L3 12M3 12L10 5M3 12H21" stroke="#3F3F46" stroke-width="2.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </svg>
-                                    <div class="w-56 h-8 bg-yellow-100 rounded-full text-xs ml-10 px-4 p-2 font-bold text-gray-700;"
-                                        id="toastMsg" style="display:none">지역이 성공적으로
+                                    </a>
+                                    <div class="w-56 h-8 bg-yellow-100 rounded-full text-xs ml-10 px-4 pb-1 pt-1 font-bold text-gray-700 "
+                                        id="toastMsg" style="display: none;">지역이 성공적으로
                                         변경되었습니다.</div>
                             </div>
-
-                            <div>
-                                <div class="font-bold text-3xl">다른 지역 확인하기</div>
-
-                            </div>
                         </div>
-                    </div>
-                </nav>
-                <div>
-                    <div id="countryBox">
-                        <div><button class="region_btn" id="서울특별시">서울특별시</button></div>
-                        <div><button class="region_btn" id="부산광역시">부산광역시</button></div>
-                        <div><button class="region_btn" id="대구광역시">대구광역시</button></div>
-                        <div><button class="region_btn" id="인천광역시">인천광역시</button></div>
-                        <div><button class="region_btn" id="광주광역시">광주광역시</button></div>
-                        <div><button class="region_btn" id="대전광역시">대전광역시</button></div>
-                        <div><button class="region_btn" id="울산광역시">울산광역시</button></div>
-                        <div><button class="region_btn" id="세종특별자치시">세종특별자치시</button></div>
-                        <div><button class="region_btn" id="경기도">경기도</button></div>
-                        <div><button class="region_btn" id="강원특별자치도">강원특별자치도</button></div>
-                        <div><button class="region_btn" id="충청북도">충청북도</button></div>
-                        <div><button class="region_btn" id="충청남도">충청남도</button></div>
-                        <div><button class="region_btn" id="전라북도">전라북도</button></div>
-                        <div><button class="region_btn" id="전라남도">전라남도</button></div>
-                        <div><button class="region_btn" id="경상북도">경상북도</button></div>
-                        <div><button class="region_btn" id="경상남도">경상남도</button></div>
-                        <div><button class="region_btn" id="제주특별자치도">제주특별자치도</button></div>
-                    </div>
 
-                </div>
-            </section>
+                        <div class="font-bold text-3xl ml-1">다른 지역 확인하기</div>
+
+                    </div>
 
         </div>
+        </nav>
+        <div>
+            <div id="countryBox">
+                <div><button class="region_btn" id="SEOUL">서울특별시</button></div>
+                <div><button class="region_btn" id="BUSAN">부산광역시</button></div>
+                <div><button class="region_btn" id="DAEGU">대구광역시</button></div>
+                <div><button class="region_btn" id="INCHEON">인천광역시</button></div>
+                <div><button class="region_btn" id="GWANJU">광주광역시</button></div>
+                <div><button class="region_btn" id="DAEJEON">대전광역시</button></div>
+                <div><button class="region_btn" id="ULSAN">울산광역시</button></div>
+                <div><button class="region_btn" id="SEJONG">세종특별자치시</button></div>
+                <div><button class="region_btn" id="GYEONGGI">경기도</button></div>
+                <div><button class="region_btn" id="GANGWON">강원특별자치도</button></div>
+                <div><button class="region_btn" id="CHUNGCHEONGBUKDO">충청북도</button></div>
+                <div><button class="region_btn" id="CHUNGCHEONGNAMDO">충청남도</button></div>
+                <div><button class="region_btn" id="JEOLLABUKDO">전라북도</button></div>
+                <div><button class="region_btn" id="JEOLLANAMDO">전라남도</button></div>
+                <div><button class="region_btn" id="GYEONGSANGBUKDO">경상북도</button></div>
+                <div><button class="region_btn" id="GYEONGSANGNAMDO">경상남도</button></div>
+                <div><button class="region_btn" id="JEJU">제주특별자치도</button></div>
+            </div>
+
+        </div>
+        </section>
+
+    </div>
     </div>
 
 
