--- a/account/editMember.html
+++ b/account/editMember.html
@@ -75,6 +75,7 @@
       id="locationSelect"
       name="location"
       class="form-select w-60 h-9 px-3 py-2 rounded-md border-none focus:outline-none"
+      style="margin-left: -10px;"
       required
     >
     <option id="regionDisplay" value=""  selected>${memberData.region}</option>
@@ -99,7 +100,7 @@
     <button
       id="changeRegion"
       type="button"
-      class="ml-8 items-end w-12 h-7 bg-gray-600 rounded-md text-white font-bold text-sm"
+      class="ml-9 items-end w-12 h-7 bg-gray-600 rounded-md text-white font-bold text-sm"
     >
       변경
     </button>
